--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>My Site</title>
-    <link rel="stylesheet" href="C:\Users\Carlos\Desktop\Web Developement\css website\style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="C:\Users\Carlos\Desktop\Web Developement\css website\favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
