--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   </head>
   <body>
     <div class="the_top_container">
-      <img class="top-cloud" src="C:\Users\Carlos\Desktop\Web Developement\css website\images\cloud.png" alt="cloud">
+      <img class="top-cloud" src="cloud.png" alt="cloud">
       <h1>I'm Carlos.</h1>
       <h2 class="grammer">a <span class="pro">pro</span>grammer</h2>
-      <img class="bottom-cloud" src="C:\Users\Carlos\Desktop\Web Developement\css website\images\cloud.png" alt="cloud">
-      <img src="C:\Users\Carlos\Desktop\Web Developement\css website\images\mountain.png" alt="mountain">
+      <img class="bottom-cloud" src="cloud.png" alt="cloud">
+      <img src="mountain.png" alt="mountain">
     </div>
     <div class="middle-container">
       <div class="profile">
